--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Split large SVG sewing patterns into printable tiled PDFs locally in your browser.">
-  <title>SVG Pattern Splitter (Sewing Edition)</title>
+  <title>SVG Pattern Splitter (Sewing Edition) - Free Online Tool</title>
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="SVG Pattern Splitter (Sewing Edition) - Free Online Tool">
+  <meta name="description"
+    content="Split large SVG sewing patterns into printable tiled PDFs (A4, Letter, A0) locally in your browser. Free, secure, and offline-capable tool for sewists.">
+  <meta name="keywords"
+    content="sewing pattern, pdf pattern, pattern splitter, svg to pdf, tiled pdf, a4 printing, sewing tool, pattern projector, offline sewing tool">
+  <meta name="author" content="Vajahath Ahmed">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#4f46e5">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://vajahath.github.io/pattern-splitter/">
+  <meta property="og:title" content="SVG Pattern Splitter (Sewing Edition) - Free Online Tool">
+  <meta property="og:description"
+    content="Split large SVG sewing patterns into printable tiled PDFs (A4, Letter, A0) locally in your browser. Free, secure, and offline-capable tool for sewists.">
+  <meta property="og:image" content="https://vajahath.github.io/pattern-splitter/demo.webp">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vajahath.github.io/pattern-splitter/">
+  <meta property="twitter:title" content="SVG Pattern Splitter (Sewing Edition) - Free Online Tool">
+  <meta property="twitter:description"
+    content="Split large SVG sewing patterns into printable tiled PDFs (A4, Letter, A0) locally in your browser. Free, secure, and offline-capable tool for sewists.">
+  <meta property="twitter:image" content="https://vajahath.github.io/pattern-splitter/demo.webp">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://vajahath.github.io/pattern-splitter/">
 </head>
 
 <body class="bg-slate-50 min-h-screen font-sans text-slate-800 flex flex-col">
