feat: Add cut/glue annotations to PDF tiles and enforce a minimum 10mm margin for proper labeling.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="mb-5">
           <label for="margin" class="block text-xs font-medium text-slate-600 mb-1">Margin / Overlap (mm)</label>
-          <input type="number" id="margin" value="10"
+          <input type="number" id="margin" value="10" min="10"
             class="w-full p-2 border border-slate-300 rounded text-sm focus:ring-indigo-500 focus:border-indigo-500">
           <p class="text-[10px] text-slate-400 mt-1 leading-tight">
             Dotted lines will be drawn at this margin. Scale check lines will be drawn outside this margin.
